--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
 				<div class="hs-item set-bg" data-setbg="./img/slider/1.jpg">
 					<div class="container text-white">
 						<h1>Fusce erat dui, venenatis et erat in, vulputate dignissim lacus. </h1>
-						<h2>Showcase your work</h2>
+						<h2>NYME MODEL MANAGEMENT</h2>
 						<div class="site-btn"><span>Read More</span></div>
 					</div>
 				</div>
